--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Java Quizler</title>
+    <title>Javascript Quizler</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="./assets/style.css" />
   </head>
   <body>
     <header>
+      <div class="scoreBtn-container">
+        <button id="highScore">View high score</button>
+      </div>
         <div class = "title-page">Coding Quiz Challenge</div>
         <div class="time-container hide">
             Time
             <span id="time">100</span>
         </div>
-        <button class = "start-quizBtn" id="start-quiz">Start Quiz</button>
+        <button class="start-quizBtn" id="start-quiz">Start Quiz</button>
     </header>
+
     <section class="questions-container hide">
         <h2 id="display-question"></h2>
         <div class="answerBtn-container">
@@ -23,6 +27,10 @@
             <button class="answer" id="answer3"></button>
             <button class="answer" id="answer4"></button>
         </div>
+        <div class="right-wrong"></div>
+    </section>
+    <section class="">
+
     </section>
 
     <script src="./assets/script.js"></script>
