added CSS styling to page and tied loose ends

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
       <div class="scoreBtn-container">
         <button id="highScore">View high score</button>
       </div>
-        <h1 class = "title-page">Coding Quiz Challenge</h1>
+        <h1 class = "title-page"><strong>Quiz Challenge</strong></h1>
         <div class="time-container hide">
             Time Remaining
-            <span id="time">100</span>
+            <span id="time">40</span>
         </div>
         <button class="start-quizBtn" id="start-quiz">Start Quiz</button>
     </header>
 
     <section class="questions-container hide">
-        <h2 id="display-question"></h2>
+        <h2 id="display-question"><strong></strong></h2>
         <div class="answerBtn-container">
             <button class="answer" id ="answer1"></button>
             <button class="answer" id ="answer2"></button>
@@ -52,8 +52,8 @@
 
     <section class="score-card hide">
       <div class="display-score">
-        <h2>High scores</h2>
-        <p><span id="user-score"></span></p>
+        <h2><strong>High scores</strong></h2>
+        <p><span id="user-score">Nothing here!</span></p>
       </div>
       <button id="backBtn">Back</button>
       <button id="clearBtn">Clear high score</button>
